--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.5
+Date: 2019-08-04
+  Bugfixes:
+    - Fixed an error with ltn. https://mods.factorio.com/mod/FuelTrainStop/discussion/5d443a22de13a8000b8d6c53
+---------------------------------------------------------------------------------------------------
 Version: 0.17.4
 Date: 2019-07-27
   Bugfixes:
