--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.6
+Date: 2019-08-05
+  Bugfixes:
+    - Fixed a typo.
+---------------------------------------------------------------------------------------------------
 Version: 0.17.5
 Date: 2019-08-04
   Bugfixes:
