--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.17.8
+Date: 2019-12-18
+  Bugfixes:
+    - Fixed an error. https://mods.factorio.com/mod/FuelTrainStop/discussion/5df141793aed27000bdb9806
+---------------------------------------------------------------------------------------------------
 Version: 0.17.7
 Date: 2019-08-12
   Bugfixes:
