--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.0
+Date: 2020-11-27
+  Major Features:
+    - Release 1.0.
+---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: 2020-01-31
   Major Features:
